correct left padding on mobile brandname

--- a/.source/themes/thematrix/static/css/thematrix.css
+++ b/.source/themes/thematrix/static/css/thematrix.css
@@ -58,6 +58,7 @@ abbr[title] {
 }
 
 a.brand {
+    padding-left: 20px !important;
     font-size: 22px;
     font-weight: bold;
 }
